@@ -1,3 +1,4 @@
+	Email alerts added for changes
 	Surnames list added
 	Small xhtml changes to ensure tables correctly formed
 	Added Image gallery for all images
